# dogscogs-utils

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  stubgen.ps1  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
dogscogs/: __init__.py
dogscogs-utils/adapters/: parsers.py
dogscogs-utils/cogs/: reactcog.py
dogscogs-utils/constants/: __init__.py  discord.py
dogscogs-utils/converters/: channel.py  diceroll.py  mention.py  user.py
dogscogs-utils/parsers/: date.py  token.py
dogscogs-utils/predicates/: __init__.py  color.py
dogscogs-utils/views/: confirmation.py
dogscogs-utils/views/modals/: percentage.py
dogscogs/constants/: colors.py  regex.py
dogscogs/constants/discord/: channel.py  user.py  (+4 more)
dogscogs/converters/: channel.py  date.py  percent.py  user.py
dogscogs/core/: __init__.py  converter.py  events.py
dogscogs/parsers/: date.py  emoji.py  token.py
dogscogs/predicates/: __init__.py
dogscogs/views/: confirmation.py  paginated.py  prompts.py
dogscogs_utils/DogCog/: DogCog.py
dogscogs_utils/ReactCog/: ReactCog.py
dogscogs_utils/adapters/: converters.py  parsers.py
dogscogs_utils/cogs/: __init__.py  dogcog.py  reactcog.py
tests/: __init__.py  test_dogscogs_utils.py
typings/constants/: colors.pyi  regex.pyi
typings/converters/: diceroll.pyi  mention.pyi  user.pyi
typings/parsers/: date.pyi  emoji.pyi
typings/predicates/: __init__.pyi
typings/views/: confirmation.pyi  paginated.pyi
(+24 files in other folders)
