[project]
name = "dogscogs-utils"
version = "0.1.19"
description = "A collection of utility functions for the Dogscogs project."
authors = [
    { name = "klypto", email = "klypyon@gmail.com"}
]
requires-python = ">=3.8"

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/dogscogs/typings"

[tool.setuptools.package-data]
"dogscogs" = ["py.typed"]